Fix bug: the width of the headings exceeded the width of the viewport on small screens

--- a/muunna-frontend/src/App.css
+++ b/muunna-frontend/src/App.css
@@ -17,8 +17,15 @@ a {
   color: #4cdbc4;
 }
 
-h1, h2, h3 {
+h1, h2, h3, h4 {
   font-family: 'Bowlby One SC', cursive;
+}
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  h1, h2, h3, h4 {
+    font-size: 1rem;
+  
+  }
 }
 
 @keyframes App-logo-spin {
